--- a/posts/2017-08-21.md
+++ b/posts/2017-08-21.md
@@ -127,11 +127,11 @@ The `usize::max_value()` and `1` parameters to `loop_variable` indicate the uppe
 
 So now we've come to the hard part. We need to figure out what to do with a stream of timestamped edge changes, and a stream of timestamped rank changes. We can put off the complicated logic for just a moment, and build the skeleton of the `bump` dataflow operator first.
 
-The edge changes flowing around will have type `((usize, usize), i64)` and the rank changes will have type `(usize, i64)`. The first `usize` field in each of these indicates the source node. The `i64` in each indicate the amount of change. We are going to want to shuffle these changes between workers so that all changes for each node arrive at a single worker.
+The edge changes flowing around will have type `((usize, usize), i64)` and the rank changes will have type `(usize, i64)`. The first `usize` field in each of these indicates the source node. The `i64` in each indicate the amount of change. 
 
-To shuffle data between workers we could use the `exchange` operator. It doesn't change the logical contents of the stream, but it does move the records between workers based on a supplied function (from record to integer; we would just pick out the first field). Another way to exchange data is, as part of building a new operator we can specify how its inputs must be shuffle for the operator to be correct. We are going to do that instead.
+Because we may be running with multiple workers, we'll want to shuffle each stream so that changes to the same source arrive at the same worker. To shuffle data between workers we could use the `exchange` operator. It doesn't change the logical contents of the stream, but it does move the records between workers based on a supplied function (from record to integer; we would just pick out the first field). Another way to exchange data is, as part of building a new operator we can specify how its inputs must be shuffled for the operator to be correct. We are going to do that instead.
 
-Our plan is to build a binary operator, taking both `edge_stream` and `rank_stream` as input. Because we may be running with multiple workers, we'll want to shuffle each stream so that changes to the same source arrive at the same worker. I'm going to blat down the skeleton of such an operator now, using one of timely dataflow's generic binary operators, `binary_frontier`.
+Our plan is to build a binary operator, taking both `edge_stream` and `rank_stream` as input. I'm going to blat down the skeleton of such an operator now, using one of timely dataflow's generic binary operators, `binary_frontier`.
 
 ```rust
 worker.dataflow(|scope| {
@@ -188,11 +188,11 @@ Let's map out what our initialization closure looks like, as it isn't too compli
     }
 ```
 
-These five declarations are for the internal state of our operator. This is just Rust declaration syntax, there's nothing magical here. When we eventually use these in the closure below, Rust is bright enough to transfer their ownership to the returned closure. We don't have to create a new type called `BumpOperatorState` with five member fields or anything like that.
+These five declarations are for the internal state of our operator. This is just Rust declaration syntax, there's nothing magical here. When we eventually use these in the closure below, Rust is bright enough to transfer their ownership to the returned closure. We don't have to create a new type called `BumpOperatorState` with five member fields and a `run` method or anything like that.
 
 Apparently we are going to stash some things, and keep lists of other things. This isn't very clear yet, in part because type inference in Rust means we don't have to specify the types if Rust can sort them out from how we use them. In an attempt to be helpful, let me explain:
 
-The `_stash` hash maps are going to be for storing received inputs, respectively edge changes and rank changes, until it is time to process them. This is because we could receive such changes out of order, or one iteration could bleed into the next, that sort of thing. We will stash all changes first, keyed by timestamp, and then extract the changes when it is their round.
+The `_stash` hash maps are going to be for storing received inputs, respectively edge changes and rank changes, until it is time to process them. We could receive such changes out of order, or one iteration could bleed into the next, that sort of thing. Instead, we will stash all changes first, keyed by timestamp, and then extract the changes when it is their round.
 
 The three lists represent edges, ranks, and some temporary storage, respectively: `edges[node]` contains a list of destinations from `node`, `ranks[node]` is the current number of surfers hanging out at `node`, and `delta` is a temporary buffer we use to accumulate output changes in ranks before sending them (so that we can cancel some and avoid sending them).
 
@@ -206,7 +206,7 @@ The closure we need to specify now takes three arguments: handles to the two inp
 
 Our program structure is going to be pretty typical: we read from our input queues but stash the results until we are sure we want to process them. Timely dataflow delivers timestamped data as it arrives, not "in timestamp order" or anything. We'll want to be careful to make sure that we only work with changes for each round at a time.
 
-Having stashed whatever is read on each input, our operator then checks out each of the stashes and asks if there are any stashed times that neither input could now produce. This involves looking at the `frontier()` of each input, which describes which times we should still expect to see. If neither frontier could result in some stashed time, we should process it!
+Having stashed whatever is read on each input, our operator then checks out each of the stashes and asks if there are any times that neither input can any longer produce. This involves looking at the `frontier()` of each input (and why we used `binary_frontier`), which describes which times we should still expect to see. If neither frontier could result in some stashed time, we should process it!
 
 ```rust
     move |input1, input2, output| {
@@ -256,7 +256,7 @@ What about the final two `TODO` items? Here is the code for `edge_changes`, whic
 
     for ((src, dst), diff) in edge_changes.drain(..) {
 
-        // 0. ensure enough state allocated, init 1M surfers.
+        // 0. ensure enough state allocated, init 1K surfers.
         while edges.len() <= src { edges.push(Vec::new()); }
         while ranks.len() <= src { ranks.push(1_000); }
 
@@ -278,6 +278,8 @@ What about the final two `TODO` items? Here is the code for `edge_changes`, whic
         }
     }
 ```
+
+The rough idea is that we are pushing a lot of `(usize, i64)` changes into `delta`, corresponding to changes in outgoing rank. We do this by subtracting the old allocation and adding the new allocation. It's not very elegant, but it is relatively concise.
 
 The only timely methods here are `output.session(&time)` and `session.give((dst, diff))`. These are the two parts to sending data in a timely dataflow operator: we need to exercise the capability to send data at a time, and then we feed the resulting session with whatever data we want to send. In this case, it is whatever the cumulative changes were between the previous distribution of rank and the subsequent distribution.
 
@@ -307,20 +309,20 @@ Our harness above feeds in three edges and then removes one. I've added some rep
     Echidnatron% cargo run --release --example pagerank
         Finished release [optimized] target(s) in 0.0 secs
         Running `target/release/examples/pagerank`
-    Duration { secs: 0, nanos: 166961 }:	(Root, 1)	2	2499	1666
-    Duration { secs: 0, nanos: 220348 }:	(Root, 2)	2	2082	1388
-    Duration { secs: 0, nanos: 228283 }:	(Root, 3)	2	1736	1157
-    Duration { secs: 0, nanos: 234816 }:	(Root, 4)	2	1446	964
-    Duration { secs: 0, nanos: 241467 }:	(Root, 5)	2	1205	804
-    Duration { secs: 0, nanos: 247821 }:	(Root, 6)	2	1004	670
-    Duration { secs: 0, nanos: 254024 }:	(Root, 7)	2	837	    558
-    Duration { secs: 0, nanos: 260351 }:	(Root, 8)	2	698	    465
-    Duration { secs: 0, nanos: 266878 }:	(Root, 9)	2	581	    387
+    Duration { secs: 0, nanos: 166961 }:    (Root, 1)      2    2499    1666
+    Duration { secs: 0, nanos: 220348 }:    (Root, 2)      2    2082    1388
+    Duration { secs: 0, nanos: 228283 }:    (Root, 3)      2    1736    1157
+    Duration { secs: 0, nanos: 234816 }:    (Root, 4)      2    1446    964
+    Duration { secs: 0, nanos: 241467 }:    (Root, 5)      2    1205    804
+    Duration { secs: 0, nanos: 247821 }:    (Root, 6)      2    1004    670
+    Duration { secs: 0, nanos: 254024 }:    (Root, 7)      2    837     558
+    Duration { secs: 0, nanos: 260351 }:    (Root, 8)      2    698     465
+    Duration { secs: 0, nanos: 266878 }:    (Root, 9)      2    581     387
     ...
-    Duration { secs: 0, nanos: 720926 }:	(Root, 47)	1	1	    1
-    Duration { secs: 0, nanos: 727150 }:	(Root, 48)	1	1	    1
-    Duration { secs: 0, nanos: 736664 }:	(Root, 101)	1	6890	6890
-    Duration { secs: 0, nanos: 742801 }:	(Root, 102)	1	5742	5742
+    Duration { secs: 0, nanos: 720926 }:    (Root, 47)     1    1       1
+    Duration { secs: 0, nanos: 727150 }:    (Root, 48)     1    1       1
+    Duration { secs: 0, nanos: 736664 }:    (Root, 101)    1    6890    6890
+    Duration { secs: 0, nanos: 742801 }:    (Root, 102)    1    5742    5742
     Echidnatron% 
 
 What we see here are some pretty standard reduction in the amount of error (about a factor of 0.85) each iteration, until the 48th iteration, at which point the error finally vanishes. 
@@ -336,23 +338,23 @@ There is a pretty gross performance bug (or three) in the operator implementatio
     Echidnatron% cargo run --release --example pagerank -- 1000000 10000000 
         Finished release [optimized] target(s) in 0.0 secs
         Running `target/release/examples/pagerank 1000000 10000000`
-    Duration { secs: 12, nanos: 209272888 }:	(Root, 1)	999951	833440369	2730
-    Duration { secs: 13, nanos: 726563426 }:	(Root, 2)	999951	693998940	2704
-    Duration { secs: 15, nanos: 255796509 }:	(Root, 3)	999951	578298549	2150
-    Duration { secs: 16, nanos: 708072918 }:	(Root, 4)	999951	481904094	1812
-    Duration { secs: 18, nanos: 153717372 }:	(Root, 5)	999951	401564212	1516
-    Duration { secs: 19, nanos: 615845563 }:	(Root, 6)	999951	334615539	1258
-    Duration { secs: 21, nanos: 054239582 }:	(Root, 7)	999951	278834174	1058
-    Duration { secs: 22, nanos: 469149840 }:	(Root, 8)	999951	232344944	874
-    Duration { secs: 23, nanos: 889478274 }:	(Root, 9)	999951	193627090	734
+    Duration { secs: 12, nanos: 209272888 }:    (Root, 1)    999951    833440369    2730
+    Duration { secs: 13, nanos: 726563426 }:    (Root, 2)    999951    693998940    2704
+    Duration { secs: 15, nanos: 255796509 }:    (Root, 3)    999951    578298549    2150
+    Duration { secs: 16, nanos: 708072918 }:    (Root, 4)    999951    481904094    1812
+    Duration { secs: 18, nanos: 153717372 }:    (Root, 5)    999951    401564212    1516
+    Duration { secs: 19, nanos: 615845563 }:    (Root, 6)    999951    334615539    1258
+    Duration { secs: 21, nanos: 054239582 }:    (Root, 7)    999951    278834174    1058
+    Duration { secs: 22, nanos: 469149840 }:    (Root, 8)    999951    232344944    874
+    Duration { secs: 23, nanos: 889478274 }:    (Root, 9)    999951    193627090    734
     ...
-    Duration { secs: 50, nanos: 949865016 }:	(Root, 30)	975941	4210777	20
-    Duration { secs: 51, nanos: 619382262 }:	(Root, 31)	956152	3503803	18
-    Duration { secs: 52, nanos: 203779878 }:	(Root, 32)	927219	2924928	16
+    Duration { secs: 50, nanos: 949865016 }:    (Root, 30)   975941    4210777      20
+    Duration { secs: 51, nanos: 619382262 }:    (Root, 31)   956152    3503803      18
+    Duration { secs: 52, nanos: 203779878 }:    (Root, 32)   927219    2924928      16
     ...
-    Duration { secs: 56, nanos: 638983100 }:	(Root, 90)	65	72	2
-    Duration { secs: 56, nanos: 639020015 }:	(Root, 91)	32	36	2
-    Duration { secs: 56, nanos: 639047710 }:	(Root, 92)	4	5	2
+    Duration { secs: 56, nanos: 638983100 }:    (Root, 90)   65        72           2
+    Duration { secs: 56, nanos: 639020015 }:    (Root, 91)   32        36           2
+    Duration { secs: 56, nanos: 639047710 }:    (Root, 92)   4         5            2
     Echidnatron% 
 
 We see a pretty steady decline from a very large amount of error, down to by round 30 relatively small error (I just 20 to be relatively small to 1,000). Pretty soon thereafter, we are stable.
@@ -360,22 +362,22 @@ We see a pretty steady decline from a very large amount of error, down to by rou
 What about shaking things up again? Let's take a stable computation like this and start making some changes. Like, let's add and remove random edges once every ten iterations. The computation starts as before, identical other than the timings, but once we finish with iteration `92` we leap ahead to the first of the changes (in round `1000` apparently).
 
     ...
-    Duration { secs: 56, nanos: 278149758 }:        (Root, 90)      65      72      2
-    Duration { secs: 56, nanos: 278175255 }:        (Root, 91)      32      36      2
-    Duration { secs: 56, nanos: 278184477 }:        (Root, 92)      4       5       2
-    Duration { secs: 56, nanos: 278218595 }:        (Root, 1001)    18      2357    781
-    Duration { secs: 56, nanos: 278325405 }:        (Root, 1002)    163     2004    55
-    Duration { secs: 56, nanos: 278791626 }:        (Root, 1003)    768     1624    7
-    Duration { secs: 56, nanos: 279336169 }:        (Root, 1004)    889     992     2
-    Duration { secs: 56, nanos: 279733224 }:        (Root, 1005)    653     724     2
-    Duration { secs: 56, nanos: 280085938 }:        (Root, 1006)    575     636     2
-    Duration { secs: 56, nanos: 280370364 }:        (Root, 1007)    461     511     2
-    Duration { secs: 56, nanos: 280568053 }:        (Root, 1008)    320     356     2
-    Duration { secs: 56, nanos: 280743687 }:        (Root, 1009)    282     312     2
-    Duration { secs: 56, nanos: 280885367 }:        (Root, 1010)    214     239     2
-    Duration { secs: 56, nanos: 281016424 }:        (Root, 1011)    205     1748    454
-    Duration { secs: 56, nanos: 281233057 }:        (Root, 1012)    340     1451    28
-    Duration { secs: 56, nanos: 281745549 }:        (Root, 1013)    843     1144    8
+    Duration { secs: 56, nanos: 278149758 }:    (Root, 90)      65      72      2
+    Duration { secs: 56, nanos: 278175255 }:    (Root, 91)      32      36      2
+    Duration { secs: 56, nanos: 278184477 }:    (Root, 92)      4       5       2
+    Duration { secs: 56, nanos: 278218595 }:    (Root, 1001)    18      2357    781
+    Duration { secs: 56, nanos: 278325405 }:    (Root, 1002)    163     2004    55
+    Duration { secs: 56, nanos: 278791626 }:    (Root, 1003)    768     1624    7
+    Duration { secs: 56, nanos: 279336169 }:    (Root, 1004)    889     992     2
+    Duration { secs: 56, nanos: 279733224 }:    (Root, 1005)    653     724     2
+    Duration { secs: 56, nanos: 280085938 }:    (Root, 1006)    575     636     2
+    Duration { secs: 56, nanos: 280370364 }:    (Root, 1007)    461     511     2
+    Duration { secs: 56, nanos: 280568053 }:    (Root, 1008)    320     356     2
+    Duration { secs: 56, nanos: 280743687 }:    (Root, 1009)    282     312     2
+    Duration { secs: 56, nanos: 280885367 }:    (Root, 1010)    214     239     2
+    Duration { secs: 56, nanos: 281016424 }:    (Root, 1011)    205     1748    454
+    Duration { secs: 56, nanos: 281233057 }:    (Root, 1012)    340     1451    28
+    Duration { secs: 56, nanos: 281745549 }:    (Root, 1013)    843     1144    8
     ...
 
 As you can see, the errors spike up from a small, focused error with large maximum value (relative to `1_000`), but quickly smearing itself across many distinct nodes with a much smaller maximum value. Before we can completely stabilize, the graph changes again, and the process repeats.
@@ -383,37 +385,37 @@ As you can see, the errors spike up from a small, focused error with large maxim
 Much later on, in terms of rounds but not seconds (0.372s), we finish (after 100 such updates):
 
     ...
-    Duration { secs: 56, nanos: 654068593 }:        (Root, 1998)    12      15      2
-    Duration { secs: 56, nanos: 654091300 }:        (Root, 1999)    27      29      2
-    Duration { secs: 56, nanos: 654113077 }:        (Root, 2000)    27      30      2
+    Duration { secs: 56, nanos: 654068593 }:    (Root, 1998)    12      15      2
+    Duration { secs: 56, nanos: 654091300 }:    (Root, 1999)    27      29      2
+    Duration { secs: 56, nanos: 654113077 }:    (Root, 2000)    27      30      2
     Echidnatron% 
 
 This leads us to our final experiment: starting up the computation as before, but immediately changing edges every iteration and not stopping. Well, not for 1,000 rounds anyhow.
 
-    Duration { secs: 12, nanos: 748735475 }:        (Root, 1)       999951  833440369       2730
-    Duration { secs: 14, nanos: 342988000 }:        (Root, 2)       999951  693998937       2704
-    Duration { secs: 15, nanos: 855482183 }:        (Root, 3)       999951  578298527       2150
-    Duration { secs: 17, nanos: 371157902 }:        (Root, 4)       999951  481904063       1812
-    Duration { secs: 18, nanos: 873135659 }:        (Root, 5)       999951  401564091       1516
-    Duration { secs: 20, nanos: 430297118 }:        (Root, 6)       999951  334615429       1258
-    Duration { secs: 21, nanos: 881825876 }:        (Root, 7)       999951  278833873       1058
-    Duration { secs: 23, nanos: 326636522 }:        (Root, 8)       999951  232346169       874
-    Duration { secs: 24, nanos: 816912132 }:        (Root, 9)       999951  193627491       734
+    Duration { secs: 12, nanos: 748735475 }:    (Root, 1)       999951  833440369       2730
+    Duration { secs: 14, nanos: 342988000 }:    (Root, 2)       999951  693998937       2704
+    Duration { secs: 15, nanos: 855482183 }:    (Root, 3)       999951  578298527       2150
+    Duration { secs: 17, nanos: 371157902 }:    (Root, 4)       999951  481904063       1812
+    Duration { secs: 18, nanos: 873135659 }:    (Root, 5)       999951  401564091       1516
+    Duration { secs: 20, nanos: 430297118 }:    (Root, 6)       999951  334615429       1258
+    Duration { secs: 21, nanos: 881825876 }:    (Root, 7)       999951  278833873       1058
+    Duration { secs: 23, nanos: 326636522 }:    (Root, 8)       999951  232346169       874
+    Duration { secs: 24, nanos: 816912132 }:    (Root, 9)       999951  193627491       734
     ...
 
 The computation starts as before, except with slight changes in each round after the first. However, the computation doesn't stabilize in the same way as above
 
     ...
-    Duration { secs: 57, nanos: 374040069 }:        (Root, 90)      5990    11088   700
-    Duration { secs: 57, nanos: 377692710 }:        (Root, 91)      6183    10643   414
-    Duration { secs: 57, nanos: 381386013 }:        (Root, 92)      6226    10310   500
-    Duration { secs: 57, nanos: 384849706 }:        (Root, 93)      5847    9848    523
-    Duration { secs: 57, nanos: 388373823 }:        (Root, 94)      5974    9285    362
-    Duration { secs: 57, nanos: 391942045 }:        (Root, 95)      6014    9809    624
-    Duration { secs: 57, nanos: 395320921 }:        (Root, 96)      5711    10258   826
-    Duration { secs: 57, nanos: 398527141 }:        (Root, 97)      5379    9579    361
-    Duration { secs: 57, nanos: 401901920 }:        (Root, 98)      5668    10267   1019
-    Duration { secs: 57, nanos: 405310015 }:        (Root, 99)      5750    11051   710
+    Duration { secs: 57, nanos: 374040069 }:    (Root, 90)      5990    11088   700
+    Duration { secs: 57, nanos: 377692710 }:    (Root, 91)      6183    10643   414
+    Duration { secs: 57, nanos: 381386013 }:    (Root, 92)      6226    10310   500
+    Duration { secs: 57, nanos: 384849706 }:    (Root, 93)      5847    9848    523
+    Duration { secs: 57, nanos: 388373823 }:    (Root, 94)      5974    9285    362
+    Duration { secs: 57, nanos: 391942045 }:    (Root, 95)      6014    9809    624
+    Duration { secs: 57, nanos: 395320921 }:    (Root, 96)      5711    10258   826
+    Duration { secs: 57, nanos: 398527141 }:    (Root, 97)      5379    9579    361
+    Duration { secs: 57, nanos: 401901920 }:    (Root, 98)      5668    10267   1019
+    Duration { secs: 57, nanos: 405310015 }:    (Root, 99)      5750    11051   710
     ...
 
 Notice that these are about the same times as above (faster, actually), but while the count and sum decrease dramatically,, the maximum doesn't really. This is because each time we make a change we are causing a local disturbance. That disturbance causes real error around that node. Each page in this graph has rank roughly 6,000, and adding an edge to a page with ten delivers some 600 new surfers to a page. This happens each round, so the error vector while small on average has relatively large maximum errors.
@@ -421,14 +423,14 @@ Notice that these are about the same times as above (faster, actually), but whil
 It would take just a few rounds, and fractions of a second, to sort out the changes and arrive at a stable state. We see this as the computation winds down, after 1,000 updates:
 
     ...
-    Duration { secs: 72, nanos: 870500941 }:        (Root, 1000)    7005    10768   531
-    Duration { secs: 72, nanos: 875108222 }:        (Root, 1001)    6999    9299    45
-    Duration { secs: 72, nanos: 879345685 }:        (Root, 1002)    6456    7598    6
-    Duration { secs: 72, nanos: 883359688 }:        (Root, 1003)    6104    6770    3
-    Duration { secs: 72, nanos: 886763122 }:        (Root, 1004)    5221    5789    3
-    Duration { secs: 72, nanos: 889600198 }:        (Root, 1005)    4356    4827    3
+    Duration { secs: 72, nanos: 870500941 }:    (Root, 1000)    7005    10768   531
+    Duration { secs: 72, nanos: 875108222 }:    (Root, 1001)    6999    9299    45
+    Duration { secs: 72, nanos: 879345685 }:    (Root, 1002)    6456    7598    6
+    Duration { secs: 72, nanos: 883359688 }:    (Root, 1003)    6104    6770    3
+    Duration { secs: 72, nanos: 886763122 }:    (Root, 1004)    5221    5789    3
+    Duration { secs: 72, nanos: 889600198 }:    (Root, 1005)    4356    4827    3
     ...
-    Duration { secs: 72, nanos: 901214500 }:        (Root, 1031)    12      13      2
+    Duration { secs: 72, nanos: 901214500 }:    (Root, 1031)    12      13      2
     Echidnatron% 
 
 It takes another thirty rounds and thirty milliseconds to settle the remaining few thousand errors, even though the maximum drops almost immediately. In this case, we can think of thirty milliseconds as the "exposure" in terms of how long you'd need to get a 100% solid answer.
