--- a/posts/2017-08-21.md
+++ b/posts/2017-08-21.md
@@ -418,7 +418,7 @@ The computation starts as before, except with slight changes in each round after
     Duration { secs: 57, nanos: 405310015 }:    (Root, 99)      5750    11051   710
     ...
 
-Notice that these are about the same times as above (faster, actually), but while the count and sum decrease dramatically,, the maximum doesn't really. This is because each time we make a change we are causing a local disturbance. That disturbance causes real error around that node. Each page in this graph has rank roughly 6,000, and adding an edge to a page with ten delivers some 600 new surfers to a page. This happens each round, so the error vector while small on average has relatively large maximum errors.
+Notice that these are about the same times as above (faster, actually), but while the count and sum decrease dramatically, the maximum doesn't really. This is because each time we make a change we are causing a local disturbance. That disturbance causes real error around that node. Each page in this graph has rank roughly 6,000, and adding an edge to a page with ten other edges delivers some 600 new surfers to a page. This happens each round, so the error vector while small on average has relatively large maximum errors.
 
 It would take just a few rounds, and fractions of a second, to sort out the changes and arrive at a stable state. We see this as the computation winds down, after 1,000 updates:
 
@@ -445,7 +445,7 @@ For folks more familiar with the "1/n" calibration (where we ensure all ranks su
 
     0.15 * (6 / 1000) / n
 
-which ends up at just less than a tenth of a percent. You can crank up the accuracy by changing the `1_000` to a `1_000_000`, with the downside that changes persist for longer. There are also a large number of optimizations in the paper, including my favorite: "sit on small changes for a while".
+which ends up at just less than a tenth of a percent. You can crank up the accuracy by changing the `1_000` to a `1_000_000`, with the downside that changes persist for longer.
 
 ### Conclusions
 
