--- a/posts/2017-08-21.md
+++ b/posts/2017-08-21.md
@@ -454,3 +454,102 @@ You can totally write a live pageranking program in timely dataflow using not al
 PageRank is a bit special, as a linear system it is relatively easy to update the computation and still be sure that we are still converging to a well-defined limit. Not all iterative systems have that property, including notable examples like label propagation for connected components (where you either need to totally restart, or using something like [differential dataflow](https://github.com/frankmcsherry/differential-dataflow)).
 
 **Exercise**: Our computation didn't have an input stream of rank changes, because it wasn't clear what they would mean. But they do have a meaning! The initial stream of rank changes are the changes to the *a priori* ranks for each page. If you have some external reason that `guardian.co.uk` is meritorious, at least more so than `xxx.hot-llama-action.vt`, you can supply these as initial changes. Moreover, you can live-update these as well. Try it!
+
+### Addendum: Bugzes! (2017-09-06)
+
+It turns out there were bugs! A few were just silly errors that demonstrated that I couldn't handle the round-off error when distributing an integral number of things between an integral number of other things. But, there was a serious business error that I thought I would explain.
+
+Ok, recall that the way the PageRanking code works is by associating a rank with each page, stored in `ranks[page]`. The intent at all times is that `ranks[page]` should be (i) scaled down just a bit (a factor of `5/6` in the code), and then (ii) distributed uniformly among outgoing edges. Whenever `ranks[page]` changes, or the outgoing edges change, we undo whatever distribution of rank we had previously, re-do the new distribution, and ship any resulting differences.
+
+Conceptually, this is still correct. All the math is still right. However, there is an annoying problem with neither integers nor floating point numbers actually being *real* numbers. This annoying problem meant that our computation might not converge in some contexts.
+
+Imagine `ranks[page]` changes by `+1`, which means there is now one more unit of rank we could distribute. Or it might get absorbed at the node. It all depends on how `ranks[page]` and `rank[page] + 1` get distributed. Let's take a peek at the code and see what happens:
+
+```rust
+// this method allocates some rank between elements of `edges`.
+fn allocate(rank: i64, edges: &[(usize, i64)], send: &mut Vec<(usize, i64)>) {
+    if !edges.is_empty() {
+        assert!(rank >= 0);
+        assert!(edges.iter().all(|x| x.1 > 0));
+
+        let distribute = (rank * 5) / 6;
+        let degree = edges.len() as i64;
+        let share = distribute / degree;
+        for i in 0 .. edges.len() {
+            if (i as i64) < (distribute % (edges.len() as i64)) {
+                send.push((edges[i].0, edges[i].1 * (share + 1)));
+            }
+            else {
+                send.push((edges[i].0, edges[i].1 * share));
+            }
+        }
+    }
+}
+```
+
+This method is what *I think* one wants to distribute `rank` uniformly among the positive entries of `edges` (which we imagine have count one despite being `i64`). We first figure out how much rank we will actually distribute versus stash locally (`distribute`), and we hand out roughly `distribute / degree` to each neighbor. We bump this up for a few nodes so that the total is actually `distribute`, to make sure we aren't losing mass.
+
+By distributing exactly `distibute`, we are sure that if someone changes `rank` by `diff`, then we distribute changes of at most `diff`, and probably more like `5 * diff / 6`. Of course, when `diff` is small (like `+/-1`) we probably end up distributing exactly `diff` in changes.
+
+Why would this converge? What causes small changes to stop circulating?
+
+Ok, so they don't have to, it turns out. You could have a cycle, for example, in which every node has `rank = 1`, and so plans to distribute .. zero. But, if a single `+1` happens to change the rank, then it will now send a `+1` as an output. If each node in the cycle has an initial rank of `1` (or is otherwise poised to "not absorb" the next unit of rank it gets) each node will pass along the increment. Eventually, though, the increment circulates around and around and hits a node that wants to absorb its next unit of rank (it can't circulate forever without being absorbed, because each time it moves it increments a `rank`).
+
+This sound like it converges, so what is the problem? No problem, if all the changes are positive. Or if all the changes are negative. If there are positive and negative changes, problem.
+
+Imagine that cycle again, but with a `+1` change and a `-1` change, both going around the cycle. Each `+1` produces a new `+1` as output, and each `-1` produces retracts the change with a `-1` as output. Nothing is absorbed, and the cycle continues forever. Or, forever-ish.
+
+#### Stashing Updates
+
+One of the main features of the algorithm we implemented, called "Update Iteration" in the paper, is that we *don't have to propagate changes*. Each node can just sit on some received changes if it has a mind to. In the linked paper, these were for good reasons, like "I'll go faster if I wait". 
+
+We are going to hold updates back because "we might not converge otherwise".
+
+There was a line in the code that indicated what we should do when we receive an update for a page `src`. It was pretty casual, and said we should just fold in the changes:
+
+```rust
+        // 2. update ranks.
+        ranks[src] += diff;
+```
+
+Ok, we aren't going to do that any more. Instead, we are going to maintain a stash of outstanding differences, `diffs`, and add `diff` to the corresponding entry. If the entry is now large enough, where I chose a threshold so that we would be certain to absorb at least some of `diff`, only then do we include the change and determine output differences.
+
+```rust
+        // 2. update ranks.
+        diffs[src] += diff;
+        if diffs[src].abs() >= 6 {
+            ranks[src] += diffs[src];
+            diffs[src] = 0;
+}
+```
+
+Now, you might say "we may converge, but not to the right answer!", and that is .. true. We can always get the correct answer out, by only circulating positive updates for a while, then only circulating negative updates, but we can also not worry too much about it, because the amount we are holding back is within rounding error. We are holding the changes back because `5 * (ranks[src] + diff) / 6` equals `5 * ranks[src] / 6 + diff`; if that isn't true we can just send the changes along and be assured that the total error decreases. Hence the threshold `6`, by the way. We could also just directly test that rounding condition.
+
+#### Performance
+
+This "speeds up" the computation a bit, especially once we've started running and make few changes each round. If you recall from above, it took about 15 seconds (from `57.405` to `72.870`) to go from round 100 to round 1000. These are the rounds where we make sparse updates, and the only work in each round is the distribution of relatively small updates. With the change above, small updates are held back, leading to much less computation (and a different answer).
+
+Specifically, it now takes under two seconds to move from round 100 to round 1000.
+
+    Duration { secs: 59, nanos: 698451552 }:        (Root, 97)      3283    6936    361
+    Duration { secs: 59, nanos: 700766979 }:        (Root, 98)      3611    7785    1016
+    Duration { secs: 59, nanos: 703259610 }:        (Root, 99)      3921    8629    707
+    Duration { secs: 59, nanos: 705412769 }:        (Root, 100)     3383    8396    662
+    ...
+    Duration { secs: 61, nanos: 420612280 }:        (Root, 999)     2467    5814    500
+    Duration { secs: 61, nanos: 422341008 }:        (Root, 1000)    2716    5770    529
+    Duration { secs: 61, nanos: 423996542 }:        (Root, 1001)    2325    3969    45
+    Duration { secs: 61, nanos: 425271051 }:        (Root, 1002)    1894    2356    7
+    Duration { secs: 61, nanos: 426159112 }:        (Root, 1003)    1368    1379    2
+    Duration { secs: 61, nanos: 426756059 }:        (Root, 1004)    857     860     2
+    Duration { secs: 61, nanos: 427136115 }:        (Root, 1005)    537     540     2
+    Duration { secs: 61, nanos: 427399284 }:        (Root, 1006)    341     346     2
+    Duration { secs: 61, nanos: 427546367 }:        (Root, 1007)    182     187     2
+    Duration { secs: 61, nanos: 427634718 }:        (Root, 1008)    105     106     2
+    Duration { secs: 61, nanos: 427694704 }:        (Root, 1009)    74      75      2
+    Duration { secs: 61, nanos: 427732237 }:        (Root, 1010)    42      45      3
+    Duration { secs: 61, nanos: 427755162 }:        (Root, 1011)    21      21      1
+
+We do still end in a state where if we played forward all of the positive updates, and then all of the negative updates, we would still reach the same limit as above. We are just more circumspect while executing, to make sure we don't end up in some defective behavior.
+
+Plus, this also shows us how holding back updates can lead to improved performance. We have an order of magnitude higher throughput, and we only sacrifice accuracy transiently.
